--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -52,6 +52,10 @@
 				  <span class="input-group-text">Zip</span>
 				  <input type="text" aria-label="Zip" class="form-control" name="zip" />
 				</div>
+				<div class="input-group">
+				  <span class="input-group-text">SSN</span>
+				  <input type="text" aria-label="ssn" class="form-control" name="ssn" />
+				</div>
 				<div class="text-align-end">
 					<button type="submit" class="btn btn-primary mb-3">Search</button>
 				</div>
@@ -66,12 +70,14 @@
 						<th>First</th>
 						<th>Middle</th>
 						<th>Last</th>
+						<th>Suffix</th>
 						<th>Address</th>
 						<th>City</th>
 						<th>State</th>
 						<th>Zip</th>
 						<th>Phone</th>
 						<th>DOB</th>
+						<th>ALTDOB</th>
 						<th>SSN</th>
 					</tr>
 				</thead>
