--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -23,9 +23,6 @@
 			#toggly button:disabled {
 				color: #CCC;
 			}
-			.offcanvas{
-				z-index: 1;
-			}
 		</style>
 	</head>
 	<body>
@@ -91,7 +88,7 @@
 			<div class="row">
 				<div class="col-sm-3"><h3>Search #<span class="snum"></span></h3></div>
 				<div class="col-sm-9 text-align-end status">
-					<div class="progress" role="progressbar" aria-label="search progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+					<div class="progress w-50 my-2" role="progressbar" aria-label="search progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
 					  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0%">0 %</div>
 					</div>
 				</div>
