--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -86,15 +86,15 @@
 
 		<template type="text/html" id="table-template">
 			<div class="row">
-				<div class="col-sm-3"><h3>Search #<span class="snum"></span></h3></div>
-				<div class="col-sm-9 text-align-end status">
+				<div class="offset-sm-1 col-sm-5"><h3>Search #<span class="snum"></span></h3></div>
+				<div class="col-sm-5 text-align-end status">
 					<div class="progress w-50 my-2" role="progressbar" aria-label="search progress" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
 					  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 0%">0 %</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<table class="table mb-4 shadow">
+				<table class="col-sm-10 offset-sm-1 table mb-4 shadow">
 					<thead>
 						<tr>
 							<th>First</th>
