--- a/webapp/www/index.html
+++ b/webapp/www/index.html
@@ -2,28 +2,13 @@
 <html lang="en">
 	<head>
 		<title>National Public Data</title>
+
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="index.css" />
+		
 		<script type="text/javascript" src="jquery.min.js"></script>
 		<script type="text/javascript" src="bootstrap.min.js"></script>
 		<script type="text/javascript" src="index.js"></script>
-		<style>
-			.progress-bar {
-				color: white;
-				font-size: 1rem;
-				font-weight: 700;
-			}
-			#toggly {
-				font-size: 1.5rem;
-				font-weight: 700;
-				position: fixed;
-				top: 5;
-				left: 5;
-				z-index: 0;
-			}
-			#toggly button:disabled {
-				color: #CCC;
-			}
-		</style>
 	</head>
 	<body>
 		<div class="container-fluid mt-3">
@@ -94,7 +79,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<table class="col-sm-10 offset-sm-1 table mb-4 shadow">
+				<table class="col-sm-10 offset-sm-1 table mb-4 shadow searchresults">
 					<thead>
 						<tr>
 							<th>First</th>
